# seccomppolicy

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: tox.yml
src/seccomppolicy/: _constants.py  _containerpolicy.py  _defaultpolicy.py  _libc.py  _libcap.py  _libseccomp.py  _seccomp.py
tests/: test_imports.py
