[metadata]
name = seccomppolicy
version = attr: seccomppolicy.__version__
author = Christian Heimes
author_email = christian@python.org
license = MIT
license_file = LICENSE
description = seccomp policy
keywords = seccomp, security
url = https://github.com/tiran/seccomppolicy
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Development Status :: 1 - Planning
    Operating System :: POSIX :: Linux
    Topic :: Security

[options]
package_dir=
    =src
packages=find:
zip_safe = True
install_requires = packaging
setup_requires = setuptools
python_requires = >=3.5

[options.extras_require]
tests = pytest
lint = black; flake8; check-manifest

[options.packages.find]
where=src
